refactor(github): workflow 수정

--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -35,7 +35,6 @@ jobs:
         with:
           context: ../../
           file: .deploy/backend/Dockerfile
-          platforms: linux/amd64
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
