--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -33,8 +33,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ../../
-          file: .deploy/backend/Dockerfile
+          context: .
           push: true
+          file: .deploy/backend/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
