--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -40,3 +40,24 @@ jobs:
           file: .deploy/backend/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  nx-backend-deploy:
+    needs:
+      - build
+    runs-on:
+      - self-hosted
+    steps:
+      -
+        name: check out
+        uses: actions/checkout@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Docker run
+        run: |
+          docker ps -q --filter "name=cheolcheol/nx-backend" | grep -q . && docker stop cheolcheol/nx-backend && docker rm -fv cheolcheol/nx-backend
+          docker run -d -p 3333:3333 --name nx-backend --restart always cheolcheol/nx-backend:latest
