--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@cheol-nx/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@cheol-nx/common": ["libs/common/src/index.ts"]
     }
   },
