refactor(apps/backend): backend -> backend/basic 변경

--- a/nx.json
+++ b/nx.json
@@ -30,7 +30,7 @@
     "api-interfaces": {
       "tags": []
     },
-    "backend": {
+    "backend-basic": {
       "tags": []
     },
     "common": {
