--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "private": true,
   "dependencies": {
+    "@aws-cdk/assert": "1.128.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "aws-cdk": "^1.128.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
@@ -18,6 +20,9 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@aws-cdk/assert": "^1.46.0",
+    "@aws-cdk/core": "1.128.0",
+    "@myin/aws-cdk": "^0.0.7",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.10.0",
@@ -28,7 +33,7 @@
     "@nrwl/node": "^12.10.0",
     "@nrwl/tao": "12.10.0",
     "@nrwl/workspace": "12.10.0",
-    "@types/jest": "27.0.2",
+    "@types/jest": "^27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
@@ -36,6 +41,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
+    "source-map-support": "^0.5.16",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
