--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "basic:serve": "nx serve backend-basic",
-    "basic:build": "nx build backend-basic --prod"
+    "basic:build": "nx build backend-basic --prod",
+    "serverless:serve": "nx build backend-basic --prod && serverless offline -c serverless.yml"
   },
   "private": true,
   "dependencies": {
@@ -12,7 +13,9 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@vendia/serverless-express": "^4.5.2",
     "aws-cdk": "^1.128.0",
+    "aws-lambda": "^1.0.7",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
@@ -32,6 +35,7 @@
     "@nrwl/node": "^12.10.0",
     "@nrwl/tao": "12.10.0",
     "@nrwl/workspace": "12.10.0",
+    "@types/aws-lambda": "^8.10.85",
     "@types/jest": "^27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
@@ -40,6 +44,8 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
+    "serverless-dotenv-plugin": "^3.10.0",
+    "serverless-offline": "^8.2.0",
     "source-map-support": "^0.5.16",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
