feat(package.json): nx version up

--- a/apps/aws-infra/tsconfig.json
+++ b/apps/aws-infra/tsconfig.json
@@ -4,8 +4,7 @@
     "module": "commonjs",
     "types": ["node"]
   },
-  "include": [
-  ],
+  "include": [],
   "references": [
     {
       "path": "tsconfig.spec.json"
