--- a/apps/backend/basic/tsconfig.app.json
+++ b/apps/backend/basic/tsconfig.app.json
@@ -8,6 +8,6 @@
     "target": "es2015",
     "esModuleInterop": true
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
