--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.3",
+    "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@aws-cdk/core": "1.128.0",
     "@myin/aws-cdk": "^0.0.7",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.10.0",
-    "@nrwl/eslint-plugin-nx": "12.10.0",
-    "@nrwl/jest": "12.10.0",
-    "@nrwl/linter": "12.10.0",
-    "@nrwl/nest": "^12.10.0",
-    "@nrwl/node": "^12.10.0",
-    "@nrwl/tao": "12.10.0",
-    "@nrwl/workspace": "12.10.0",
+    "@nestjs/schematics": "^8.0.5",
+    "@nestjs/testing": "^8.2.4",
+    "@nrwl/cli": "13.2.4",
+    "@nrwl/eslint-plugin-nx": "13.2.4",
+    "@nrwl/jest": "13.2.4",
+    "@nrwl/linter": "13.2.4",
+    "@nrwl/nest": "13.2.4",
+    "@nrwl/node": "13.2.4",
+    "@nrwl/tao": "13.2.4",
+    "@nrwl/workspace": "13.2.4",
     "@types/aws-lambda": "^8.10.85",
     "@types/jest": "^27.0.2",
     "@types/node": "14.14.33",
