--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@cheol-nx/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@cheol-nx/backend": ["libs/backend/src/index.ts"],
-      "@cheol-nx/common": ["libs/common/src/index.ts"]
+      "@cheol-nx/common": ["libs/common/src/index.ts"],
+      "@cheol-nx/socket-interfaces": ["libs/socket-interfaces/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
