--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,10 @@
 {
-   "trailingComma": "all",
+  "trailingComma": "all",
   "printWidth": 100,
   "useTabs": false,
   "tabWidth": 2,
   "singleQuote": true,
   "semi": true,
   "arrowParens": "always",
-  "endOfLine": "auto",
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false
+  "endOfLine": "auto"
 }
