--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "basic:serve": "nx serve backend-basic",
     "basic:build": "nx build backend-basic --prod",
-    "basic-socket:serve": "nx serve backend-basic-socket",
+    "socket:serve": "nx serve backend-basic-socket",
+    "stand-alone:serve": "nx serve backend-basic-stand-alone",
     "serverless:serve": "nx build backend-basic --prod && serverless offline -c serverless.yml"
   },
   "private": true,
@@ -19,8 +20,8 @@
     "@vendia/serverless-express": "^4.5.2",
     "aws-cdk": "^1.128.0",
     "aws-lambda": "^1.0.7",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
